--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fungibles.xyz</title>
+    <meta
+      name="description"
+      content="We build for the #ERC20i ecosystem @base"
+    />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="keywords"
+      content="ERC20i, Base, blockchain, cryptocurrency, fungibles, web3, fungi, truffi, pepi, froggi"
+    />
+    <meta name="author" content="fungibles.xyz" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="fungibles.xyz" />
+    <meta
+      property="og:description"
+      content="We build for the #ERC20i ecosystem @base"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fungibles.xyz" />
+    <meta property="og:image" content="https://fungibles.xyz/og-image.jpg" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="fungibles.xyz" />
+    <meta
+      name="twitter:description"
+      content="We build for the #ERC20i ecosystem @base"
+    />
+    <meta name="twitter:image" content="https://fungibles.xyz/og-image.jpg" />
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="canonical" href="https://fungibles.xyz" />
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
