--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     />
     <meta name="twitter:image" content="https://fungibles.xyz/og-image.jpg" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/image.ico" />
+    <link rel="icon" type="image/png" href="/image.png" />
     <link rel="canonical" href="https://fungibles.xyz" />
     <link rel="stylesheet" href="/style.css" />
   </head>
